tooling/nargo_cli/tests/snapshots/execution_success/main_return/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: pub Field) -> pub Field {
    x
}
