tooling/nargo_cli/tests/snapshots/execution_success/main_return/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: Field):
    (no terminator instruction)
}
[main_return] Circuit output: 0x08
